; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_n_tty.c_chars_in_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_n_tty.c_chars_in_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.n_tty_data* }
%struct.n_tty_data = type { i64, i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tty_struct*)* @chars_in_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @chars_in_buffer(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.tty_struct*, align 8
  %3 = alloca %struct.n_tty_data*, align 8
  %4 = alloca i64, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %2, align 8
  %5 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %6 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %5, i32 0, i32 0
  %7 = load %struct.n_tty_data*, %struct.n_tty_data** %6, align 8
  store %struct.n_tty_data* %7, %struct.n_tty_data** %3, align 8
  store i64 0, i64* %4, align 8
  %8 = load %struct.n_tty_data*, %struct.n_tty_data** %3, align 8
  %9 = getelementptr inbounds %struct.n_tty_data, %struct.n_tty_data* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %20, label %12

12:                                               ; preds = %1
  %13 = load %struct.n_tty_data*, %struct.n_tty_data** %3, align 8
  %14 = getelementptr inbounds %struct.n_tty_data, %struct.n_tty_data* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.n_tty_data*, %struct.n_tty_data** %3, align 8
  %17 = getelementptr inbounds %struct.n_tty_data, %struct.n_tty_data* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = sub nsw i64 %15, %18
  store i64 %19, i64* %4, align 8
  br label %28

20:                                               ; preds = %1
  %21 = load %struct.n_tty_data*, %struct.n_tty_data** %3, align 8
  %22 = getelementptr inbounds %struct.n_tty_data, %struct.n_tty_data* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.n_tty_data*, %struct.n_tty_data** %3, align 8
  %25 = getelementptr inbounds %struct.n_tty_data, %struct.n_tty_data* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = sub nsw i64 %23, %26
  store i64 %27, i64* %4, align 8
  br label %28

28:                                               ; preds = %20, %12
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
